# evgopherd

./: .gitignore  AUTHORS  ChangeLog  README  configure.ac  evgopherd.conf
m4/: .gitignore  check_daemon.m4  check_event.m4
src/: Makefile.am  debug.c  debug.h  main.c  main.h  plugin-dir.c  plugin-file.c  plugin-skeleton.c  plugin.h
